--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <title>GitHub avatar finder</title>
+    <title>GitHub User Finder</title>
   </head>
   <body>
     <div id="root"></div>
